# fish-length-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: automl_model.pkl  features_scaler_model.pkl  length_scaler_model.pkl
fish_length/: __init__.py  cli_predictor.py  cli_trainer.py  predictor.py  trainer.py  utils.py
